# StarSpace

./: .gitignore  CMakeLists.txt  setup.py
python/pybind/: starspace_wrapper.cpp
python/starspace/: StarSpace.py  __init__.py
src/: data.cpp  data.h  dict.cpp  dict.h  doc_data.cpp  doc_data.h  main.cpp  model.cpp  starspace.cpp  starspace.h
src/apps/: CMakeLists.txt  embed_doc.cpp  print_ngrams.cpp  query_nn.cpp  query_predict.cpp
src/python/: CMakeLists.txt  starspace_wrapper.cpp
src/utils/: utils.cpp  utils.h
